Fix Apple Books bug w/overflow in source highlighting
Fixes #6242

--- a/data/epub.css
+++ b/data/epub.css
@@ -23,3 +23,8 @@ span.underline{ text-decoration: underline; }
 q { quotes: "“" "”" "‘" "’"; }
 div.column{ display: inline-block; vertical-align: top; width: 50%; }
 div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+/* Apple Books 2.4+ doesn't like overflow:auto on syntax highlighting generated by skylighting */
+@media screen {
+  div.sourceCode { overflow: visible !important; }
+  p, span, pre, code, blockquote { overflow: visible !important; }
+}
